  * fixed aspect ratio in snapshot function
  * lock against WM/daemon-initiated opacity changes (given suitably-patched
    compositor managers and opacity-setting daemons)
  * make the configure script rely more on pkg-config, to simplify and speed up the
    checks. Add requirement of pkg-config presence.
  * bump version requirement for xine-lib to 1.1.0 and for libpng to 1.2.8.

xine-ui (0.99.4) unstable; urgency=low

  * Fixed deadlock, segfaults and mem-leaks, several other fixes and enhancements,
    can't remember details (thanks also to Marcelo Jimenez and Jakub Labath)
  * Menu to reset video controls
  * fixed menu shortcut strings allocation/freeing [bug #1223022]
  * audio post plugin support
  * use UTF-8 for Japanese locale if nl_langinfo doesn't work [bug #1096974]
  * expand tabs in post-plugin help
  * merge some osd menus from oxine
  * aspect ratio fixed for multihead setups (especially TwinView)
    [bugs #1089328, #1001702 and #989157]
  * fixed parsing post plugin parameters of type double for some locales
  * autoload subtitles with .txt extension too
  * be more POSIX-compliant (head, tail) (build fix) [bug #1172729]
  * Russian translations (thanks to Pavel Maryanov)
  * forced not loading old playlist with -P option

xine-ui (0.99.3) unstable; urgency=low

  * enlarge stream info window (required for Russian translation),
  * possibility to specify more than one playlist in command line,
  * unlock mutex before destroying (thanks to Matthias Drochner),
  * netBSD mutex locking fix,
  * cursor support implementation into xiTK,
  * use post plugins for deinterlacing,
  * fix segfault on enqueuing,
  * fix segfault on playlist deletion,
  * add non-official subtitle support into ASX playlists,
  * add get_speed in session control optarg,
  * update displayed meta information while playback is running (useful for streaming radio),
  * restore original sound volume on exit,
  * fix memory corruption with huge playlists,