@@ -23,6 +23,7 @@ xine-ui (0.99.5) unstable; urgency=low
   * make the configure script rely more on pkg-config, to simplify and speed up the
     checks. Add requirement of pkg-config presence.
   * bump version requirement for xine-lib to 1.1.0 and for libpng to 1.2.8.
+  * fixed using window type property [bug #1534222]
 
 xine-ui (0.99.4) unstable; urgency=low
 
